Prepare repository for next `.github` release and SBT build improvements (#143)